--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "ain2": "^2.0.0",
     "pm2": "^2.6.1",
-    "pmx": "^1.2.0"
+    "pmx": "^1.2.0",
+    "underscore": "^1.8.3"
   }
 }
